--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@download/blockies": "^1.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,8 +11,10 @@
     "blockchain-addressbook": "^0.1.52",
     "bootstrap": "^5.0.1",
     "dotenv": "^10.0.0",
+    "eth-multicall": "^1.3.13",
     "i18next": "^20.3.1",
     "i18next-browser-languagedetector": "^6.1.1",
+    "mdb-ui-kit": "^3.8.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.3.1",
     "react": "^17.0.2",
@@ -19,7 +22,10 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.10.0",
     "react-modal": "^3.14.3",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.6",
     "web3modal": "^1.9.3"
