--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.0",
+    "styled-icons": "^10.34.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.6",
     "web3modal": "^1.9.3"
