--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.4.1",
+    "bignumber.js": "^9.0.1",
     "blockchain-addressbook": "^0.1.52",
     "bootstrap": "^5.0.1",
     "dotenv": "^10.0.0",
