--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eth-multicall": "^1.3.13",
     "i18next": "^20.3.1",
     "i18next-browser-languagedetector": "^6.1.1",
+    "mdb-react-ui-kit": "^1.0.0-beta7",
     "mdb-ui-kit": "^3.8.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.3.1",
