--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
