--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.10.0",
     "react-modal": "^3.14.3",
+    "react-number-format": "^4.6.3",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
