--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^3.14.3",
     "react-number-format": "^4.6.3",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
