--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-i18next": "^11.10.0",
     "react-modal": "^3.14.3",
     "react-number-format": "^4.6.3",
